--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "@supabase/supabase-js": "^2.49.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.2",
+    "fastify-type-provider-zod": "^4.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
