--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/node": "^22.14.0",
+    "pino-pretty": "^13.0.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
