--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,12 @@
     "date-fns": "^3.6.0",
     "i18next": "^23.10.1",
     "i18next-resources-to-backend": "^1.2.1",
-    "next": "14.1.4",
+    "next": "^14.2.28",
     "next-i18next": "^15.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.8.1"
   },
   "devDependencies": {
